--- a/website1/src/scss/sections/_modal.scss
+++ b/website1/src/scss/sections/_modal.scss
@@ -1,4 +1,7 @@
-.modal {
+.modal{
+  display: none;
+
+  &__body {
   position: fixed;
   left: 0;
   top: 0;
@@ -10,6 +13,8 @@
   transform: scale(1.1);
   transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
   z-index: $z-index-modal-fon;
+  overflow: auto;
+}
 
   &__overlay {
     display: none;
