--- a/website1/src/scss/sections/_what-is-bad.scss
+++ b/website1/src/scss/sections/_what-is-bad.scss
@@ -23,10 +23,6 @@
   margin-top: 100px;
 }
 
-.prevent {
-  padding: 9px 74px;
-}
-
 .remedies-box {
   display: flex;
   flex-direction: column;
